# pdffactory

./: .gitattributes  .gitignore  Dockerfile  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: pull-request.yml  push.yml
docs/: index.html  pdffactory.html
pdffactory/: __init__.py  _version.py  pdffactory.py
tests/: test_pdffactory.py
