[metadata]
name = pdffactory
description = A class to update and/or create a pdf object, and add pages to it
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/pdffactory
author = Advestis
author_email = pythondev@advestis.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/Advestis/pdffactory/issues
    Documentation = https://advestis.github.io/pdffactory
    Source Code = https://github.com/Advestis/pdffactory/

[options]
packages = find:
install_requires =
    tablewriter
    matplotlib
    PyPDF2
python_requires = >=3.7
include_package_data = True

[options.packages.find]
include = pdffactory

[versioneer]
VCS = git
style = pep440
versionfile_source = pdffactory/_version.py
versionfile_build = pdffactory/_version.py
tag_prefix = v
parentdir_prefix = pdffactory-